third_party/move/move-compiler-v2/tests/checking/dotdot/assign1.exp

Diagnostics:
error: unexpected token
  ┌─ tests/checking/dotdot/assign1.move:9:14
  │
9 │         S2 { .. } = s;
  │              ^^
  │              │
  │              Unexpected '..'
  │              Expected an identifier
